# mai-py-sem2

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.sample.json
docs/: README.md  config.ts
src/: consts.py  main.py  sync_main.py  utils.py
src/tasks/: dispatcher.py  exceptions.py  models.py  protocols.py  task_queue.py
src/tasks/async/: async_task_executor.py
src/tasks/asyncio/: async_task_executor.py  mock_handler.py
src/tasks/models/: descriptors.py  models.py  utils.py
src/tasks/sources/: api_mock_source.py  async_api_mock_source.py  file_source.py  gen_num_source.py
tests/: test_async.py  test_dispatcher.py  test_queue.py  test_sources.py  test_task_validation.py
